force-app/main/default/objects/Bedrock_Service_Case__c/Bedrock_Service_Case__c.object-meta.xml
<CustomObject>
    <description>A service case opened by the agent. In production this is standard Case.</description>
    <label>Bedrock Service Case</label>
    <nameField>
    <displayFormat>BSV-{00000}</displayFormat>
    <label>Case Number</label>
    <type>AutoNumber</type>
</nameField>
    <pluralLabel>Bedrock Service Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>