force-app/main/default/objects/Bedrock_Service_Case__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Bedrock_Asset__c</referenceTo>
    <relationshipLabel>Service Cases</relationshipLabel>
    <relationshipName>Service_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>