force-app/main/default/objects/Bedrock_Service_Case__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Bedrock_Customer__c</referenceTo>
    <relationshipLabel>Service Cases</relationshipLabel>
    <relationshipName>Service_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>