force-app/main/default/objects/Bedrock_Service_Case__c/fields/Source_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Event_Id__c</fullName>
    <description>Optional pointer back to the triggering telemetry event.</description>
    <label>Source Event Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>